# 2D-Traffic-Simulation-With-Analysis-Tool

./: .gitignore  CMakeLists.txt  Doxyfile  Makefile  Meeting-notes.md  README.md  run-app.sh  run-test.sh
assets/Tiles/: road_highlight_1.png:Zone.Identifier  road_highlight_2.png:Zone.Identifier  road_highlight_3.png:Zone.Identifier  road_highlight_4.png:Zone.Identifier
doxygen-docs/html/: annotated.html  building_8cpp.html  building_8hpp.html  building_8hpp_source.html  bus_8cpp.html  bus_8hpp.html  bus_8hpp_source.html  car_8cpp.html  car_8hpp.html  car_8hpp_source.html  city_8cpp.html  city_8hpp.html  city_8hpp_source.html  city__environment_8h.html  city__environment_8h_source.html  class_building-members.html  class_building.html  class_bus-members.html  class_bus.html  class_car-members.html  class_car.html  class_city-members.html  class_city.html  class_entity-members.html  class_entity.html  class_intersection-members.html  class_intersection.html  class_person-members.html  class_person.html  class_road-members.html  class_road.html  classes.html  coordinate_8h.html  coordinate_8h_source.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_c1be8d27e7f84178e95f152701110b19.html  direction__enum_8h.html  direction__enum_8h_source.html  doxygen_crawl.html  entity_8cpp.html  (+36 more)
doxygen-docs/latex/: annotated.tex  building_8cpp.tex  building_8hpp.tex  building_8hpp_source.tex  bus_8cpp.tex  bus_8hpp.tex  bus_8hpp_source.tex  car_8cpp.tex  car_8hpp.tex  car_8hpp_source.tex  city_8cpp.tex  city_8hpp.tex  city_8hpp_source.tex  city__environment_8h.tex  city__environment_8h_source.tex  class_building.eps  class_building.tex  class_bus.eps  class_bus.tex  class_car.eps  class_car.tex  class_city.tex  class_entity.eps  class_entity.tex  class_intersection.eps  class_intersection.tex  class_person.tex  class_road.tex  coordinate_8h.tex  coordinate_8h_source.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  dir_c1be8d27e7f84178e95f152701110b19.tex  direction__enum_8h.tex  files.tex  (+23 more)
src/: building.cpp  building.hpp  bus.cpp  bus.hpp  car.cpp  car.hpp  city.cpp  city.hpp  city_environment.h  coordinate.h  direction_enum.h  entity.cpp  entity.hpp  global.cpp  global.h  intersection.cpp  intersection.hpp  main.cpp  person.cpp  person.hpp  road.cpp  road.hpp
tests/: readme.md  tests.cpp
(+92 files in other folders)
